--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-Warga - Puri Agung 2</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#8B9DF5">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/masjokos/puriagung2/refs/heads/main/logopuriagung2.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
