--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               <input type="hidden" id="f-original-nik">
               <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                   <div><label class="form-label">NIK</label><input type="number" id="f-nik" class="modern-input" required></div>
-                  <div><label class="form-label">No KK</label><input type="number" id="f-kk" class="modern-input" required></div>
+                  <div><label class="form-label">No KK</label><input type="number" id="f-kk" class="modern-input" ></div>
               </div>
               <div><label class="form-label">Nama Lengkap</label><input type="text" id="f-nama" class="modern-input" required></div>
               <div class="grid grid-cols-2 gap-4">
@@ -292,7 +292,7 @@
                 </div>
               </div>
               <div class="grid grid-cols-2 gap-4">
-                  <div><label class="form-label">Tempat Lahir</label><input type="text" id="f-tempat" class="modern-input"></div>
+                  <div><label class="form-label">Tempat Lahir</label><input type="text" id="f-tempat" class="modern-input" required></div>
                   <div><label class="form-label">Tanggal Lahir</label><input type="date" id="f-tanggal" class="modern-input"></div>
               </div>
               <div class="grid grid-cols-2 gap-4">
@@ -311,7 +311,7 @@
                   <p class="text-[10px] font-black text-indigo-400 uppercase tracking-widest">Alamat Tinggal Sekarang</p>
                   <div class="grid grid-cols-3 gap-2">
                     <div><label class="form-label">Blok</label><select id="f-blok" class="modern-input !pl-4" onchange="syncKtp()"><option value="A">A</option><option value="B">B</option><option value="B1">B1</option><option value="C">C</option><option value="D">D</option><option value="E">E</option><option value="F">F</option><option value="G">G</option></select></div>
-                    <div><label class="form-label">No</label><input type="text" id="f-nomer" class="modern-input !pl-4" oninput="syncKtp()"></div>
+                    <div><label class="form-label">No</label><input type="text" id="f-nomer" class="modern-input !pl-4" oninput="syncKtp()" required></div>
                     <div><label class="form-label">RT</label><select id="f-rt" class="modern-input !pl-4" onchange="syncKtp()"><option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option></select></div>
                   </div>
               </div>
