--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               </div>
               <div class="grid grid-cols-2 gap-4">
                   <div><label class="form-label">Tempat Lahir</label><input type="text" id="f-tempat" class="modern-input" required></div>
-                  <div><label class="form-label">Tanggal Lahir</label><input type="date" id="f-tanggal" class="modern-input"></div>
+                  <div><label class="form-label">Tanggal Lahir</label><input type="date" id="f-tanggal" class="modern-input" required></div>
               </div>
               <div class="grid grid-cols-2 gap-4">
                   <div><label class="form-label">Status Perkawinan</label>
