--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
     }
     
     #detail-modal { position: fixed; inset: 0; background: white; z-index: 3000; display: none; flex-direction: column; overflow-y: auto; padding-bottom: 110px; }
+  
+    .required-icon {
+  color: #ef4444; /* Warna merah (Tailwind red-500) */
+  margin-left: 2px;
+  font-weight: bold;
+}
+    
   </style>
 </head>
 <body>
@@ -279,7 +286,7 @@
           <form id="form-warga" onsubmit="handleSaveWarga(event)" class="space-y-4 pb-24">
               <input type="hidden" id="f-original-nik">
               <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                  <div><label class="form-label">NIK</label><input type="number" id="f-nik" class="modern-input" required></div>
+                  <div><label class="form-label">NIK<span class="required-icon">*</span</label><input type="number" id="f-nik" class="modern-input" required></div>
                   <div><label class="form-label">No KK</label><input type="number" id="f-kk" class="modern-input" ></div>
               </div>
               <div><label class="form-label">Nama Lengkap</label><input type="text" id="f-nama" class="modern-input" required></div>
