--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-Warga - Puri Agung 2</title>
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/masjokos/puriagung2/refs/heads/main/logopuriagung2.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/masjokos/puriagung2/refs/heads/main/logopuriagung2.png"> -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet">
