--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@ function closeUltahModal() {
     <div class="bg-white w-full max-w-sm rounded-[40px] overflow-hidden shadow-2xl transform transition-all animate-in zoom-in duration-300">
         <div class="bg-gradient-to-br from-pink-100 to-indigo-100 p-8 text-center relative">
             <div class="text-4xl mb-2">🎂</div>
-            <h3 class="text-xl font-black text-slate-800">Wilujeng Tepang Tahun!</h3>
+            <h3 class="text-xl font-black text-slate-800">Selamat Ulang Tahun!</h3>
             <p class="text-[10px] font-bold text-slate-500 uppercase tracking-widest mt-1">Warga yang Berbahagia Hari Ini</p>
             <button onclick="closeUltahModal()" class="absolute top-4 right-4 text-slate-400 hover:text-slate-600">
                 <span class="material-icons">close</span>
