--- a/index.html
+++ b/index.html
@@ -949,8 +949,8 @@ function closeUltahModal() {
             </div>
 
         <div class="p-6 pt-0 text-center">
-            <button onclick="closeUltahModal()" class="w-full bg-slate-800 text-white py-4 rounded-2xl font-bold text-sm shadow-lg shadow-slate-200">
-                Aamiin & Tutup
+            <button onclick="closeUltahModal()" class="w-full bg-slate-800 text-white py-4 rounded-2xl font-bold text-sm shadow-lg shadow-slate-200" style="background-color: #f5adbe;">
+                Aamiin !
             </button>
         </div>
     </div>
