--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-Warga - Puri Agung 2</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <!-- <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/masjokos/puriagung2/refs/heads/main/logopuriagung2.png"> -->
+  <meta charset="UTF-8">
+  <meta name="description" content="e-Warga RW6 adalah aplikasi digital untuk membantu pengelolaan data warga perumahan Puri Agung 2 RW 6 secara terpusat. Aplikasi ini memudahkan pengurus RW/RT dalam mencatat, memperbarui, serta memantau data warga secara cepat, rapi, dan transparan melalui perangkat mobile.">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="@masjokos">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="/https://github.com/puriagung2/warga/blob/main/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/https://github.com/puriagung2/warga/blob/main/favicon.svg" />
+  <link rel="shortcut icon" href="/https://github.com/puriagung2/warga/blob/main/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/https://github.com/puriagung2/warga/blob/main/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="e-RW6" />
+  <link rel="manifest" href="/https://github.com/puriagung2/warga/blob/main/site.webmanifest" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet">
