--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <meta name="keywords" content="HTML, CSS, JavaScript">
   <meta name="author" content="@masjokos">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="https://github.com/puriagung2/warga/blob/main/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="https://github.com/puriagung2/warga/blob/main/favicon.svg" />
-  <link rel="shortcut icon" href="https://github.com/puriagung2/warga/blob/main/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/puriagung2/warga/blob/main/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/puriagung2/warga/refs/heads/main/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/puriagung2/warga/9cf89acc6d6b8eb775cb663b206ac7c2b9806231/favicon.svg" />
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/puriagung2/warga/refs/heads/main/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/puriagung2/warga/refs/heads/main/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="e-RW6" />
-  <link rel="manifest" href="https://github.com/puriagung2/warga/blob/main/site.webmanifest" />
+  <link rel="manifest" href="https://raw.githubusercontent.com/puriagung2/warga/refs/heads/main/site.webmanifest" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet">
