--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ function pastelColorFromString(str) {
                     </div>
                     <div class="text-left">
                         <h4 class="text-xs font-black text-slate-800">${w.Nama}</h4>
-                        <p class="text-[9px] font-bold text-pink-500 uppercase">Ulang Tahun ke-${age}th • RT 0${w.RT}</p>
+                        <p class="text-[9px] font-bold text-pink-500 uppercase">Ulang Tahun ke-${age}th • Warga RT 0${w.RT}</p>
                     </div>
                 </div>
             `;
