--- a/index.html
+++ b/index.html
@@ -355,6 +355,10 @@
                       <option value="Belum/Tidak Bekerja">Belum/Tidak Bekerja</option><option value="Mengurus Rumah Tangga">Mengurus Rumah Tangga</option><option value="Pelajar/Mahasiswa">Pelajar/Mahasiswa</option><option value="Pensiunan">Pensiunan</option><option value="PNS">PNS</option><option value="TNI">TNI</option><option value="POLRI">POLRI</option><option value="Karyawan Swasta">Karyawan Swasta</option><option value="Wiraswasta">Wiraswasta</option><option value="Petani">Petani</option><option value="Nelayan">Nelayan</option>
                   </select>
               </div>
+<div>
+    <label class="form-label">Foto Warga</label>
+    <input type="file" id="f-foto" accept="image/*" class="modern-input">
+</div>
               <button type="submit" class="btn-submit">Simpan Data Warga</button>
           </form>
       </section>
@@ -387,6 +391,15 @@
     const PAGE_SIZE = 20;
     let currentStatTab = 'balita';
 
+    // foto
+function fileToBase64(file) {
+  return new Promise((resolve, reject) => {
+    const reader = new FileReader();
+    reader.onload = () => resolve(reader.result);
+    reader.onerror = reject;
+    reader.readAsDataURL(file);
+  });
+}
 
     // Handle back button on mobile
     window.addEventListener('popstate', function (event) {
@@ -804,37 +817,88 @@ function pastelColorFromString(str) {
     }
 
     async function handleSaveWarga(e) {
-        e.preventDefault(); toggleLoading(true);
-        const blok = document.getElementById('f-blok').value;
-        const nomer = document.getElementById('f-nomer').value;
-        const rt = document.getElementById('f-rt').value;
-        const alamatTinggalStr = `Blok ${blok} No ${nomer} RT 0${rt}`;
+    e.preventDefault();
+    toggleLoading(true);
 
-        const payload = { 
-            originalNik: document.getElementById('f-original-nik').value, 
-            nik: document.getElementById('f-nik').value, 
-            kk: document.getElementById('f-kk').value, 
-            nama: document.getElementById('f-nama').value, 
-            kelamin: document.getElementById('f-kelamin').value, 
-            agama: document.getElementById('f-agama').value,
-            tempat: document.getElementById('f-tempat').value,
-            tanggal: document.getElementById('f-tanggal').value,
-            perkawinan: document.getElementById('f-perkawinan').value,
-            tinggal: document.getElementById('f-tinggal').value,
-            blok: blok, 
-            nomer: nomer, 
-            rt: rt, 
-            alamatKTP: document.getElementById('f-alamat-ktp').value,
-            alamatTinggal: alamatTinggalStr,
-            statusKel: document.getElementById('f-status-kel').value,
-            hp: document.getElementById('f-hp').value,
-            pekerjaan: document.getElementById('f-pekerjaan').value
-        };
+    const blok = document.getElementById('f-blok').value;
+    const nomer = document.getElementById('f-nomer').value;
+    const rt = document.getElementById('f-rt').value;
+    const alamatTinggalStr = `Blok ${blok} No ${nomer} RT 0${rt}`;
+
+    let payload = { 
+        originalNik: document.getElementById('f-original-nik').value, 
+        nik: document.getElementById('f-nik').value, 
+        kk: document.getElementById('f-kk').value, 
+        nama: document.getElementById('f-nama').value, 
+        kelamin: document.getElementById('f-kelamin').value, 
+        agama: document.getElementById('f-agama').value,
+        tempat: document.getElementById('f-tempat').value,
+        tanggal: document.getElementById('f-tanggal').value,
+        perkawinan: document.getElementById('f-perkawinan').value,
+        tinggal: document.getElementById('f-tinggal').value,
+        blok: blok, 
+        nomer: nomer, 
+        rt: rt, 
+        alamatKTP: document.getElementById('f-alamat-ktp').value,
+        alamatTinggal: alamatTinggalStr,
+        statusKel: document.getElementById('f-status-kel').value,
+        hp: document.getElementById('f-hp').value,
+        pekerjaan: document.getElementById('f-pekerjaan').value,
+        foto: ""   // <-- akan diisi setelah upload
+    };
+
+    // ----------------------------------
+    // PROSES UPLOAD FOTO (JIKA ADA)
+    // ----------------------------------
+    const fotoFile = document.getElementById("f-foto").files[0];
+
+    if (fotoFile) {
         try {
-            await fetch(API_URL, { method: 'POST', body: JSON.stringify({ action: 'saveWarga', args: [payload] }) });
-            navigate('dashboard'); refreshData();
-        } catch (err) { navigate('dashboard'); refreshData(); } finally { toggleLoading(false); }
+            const base64 = await fileToBase64(fotoFile);
+            const uploadRes = await fetch(API_URL, {
+                method: "POST",
+                body: JSON.stringify({
+                    action: "uploadFoto",
+                    args: [
+                        base64,
+                        "FOTO_" + payload.nik
+                    ]
+                })
+            });
+
+            const uploadJson = await uploadRes.json();
+            if (uploadJson.success) {
+                payload.foto = uploadJson.url;
+            }
+        } catch (err) {
+            console.error("Upload foto gagal:", err);
+        }
     }
+
+    // ----------------------------------
+    // SIMPAN WARGA KE SHEET
+    // ----------------------------------
+    try {
+        await fetch(API_URL, {
+            method: 'POST',
+            body: JSON.stringify({
+                action: 'saveWarga',
+                args: [payload]
+            })
+        });
+
+        navigate('dashboard'); 
+        refreshData();
+
+    } catch (err) {
+        console.error("Error save:", err);
+        navigate('dashboard');
+        refreshData();
+    } finally {
+        toggleLoading(false);
+    }
+}
+
 
   function checkLoginState() {
     const user = localStorage.getItem('ewarga_user');
